# cl_rul

./: .gitignore  CMakeLists.txt  LICENSE  cl_rect_update.sln
cl_rect_update_benchmark/: cl_rect_update_benchmark.cl  cl_rect_update_benchmark.cpp  cl_rect_update_benchmark.vcxproj
cl_rect_update_lib/: buffer_types.inc  cl_rect_update_lib.h  cl_rect_update_lib.vcxproj  cl_rect_update_lib.vcxproj.filters  kernel_code.h
cl_rect_update_test/: cl_rect_update_test.cc  cl_rect_update_test.vcxproj  cl_rect_update_test.vcxproj.filters  global_cl.cpp  global_cl.h  test1D.cpp  test_1D.cpp  test_2D.cpp  test_utils.h
ext/: cl_utils.h
